<resources>
    <string name="app_name">Masroofe</string>
    <string name="titleNameInSplashActivity">MASROOFE</string>
    <string name="mainTitleInLoginActivity">مرحبًا بك في تطبيق مصروفي</string>
    <string name="noteInLoginActivity">حان الوقت لتعرف\n وين راتبك بطير</string>
    <string name="emailTitle">البريد الإلكتروني</string>
    <string name="usernameTitle">اسم المستخدم</string>
    <string name="passwordTitle">كلمة السر</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="forgetPass"><u>هل نسيت كلمة السر ؟</u></string>
    <string name="loginBtnTitle">تسجيل الدخول</string>
    <string name="createNewAccount">إنشاء حساب جديد</string>
    <string name="createAccount">أنشِئ حسابك</string>
    <string name="full_name">الاسم الكامل</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="repeatPassword">إعادة كتابة كلمة السر</string>
    <string name="repeat_password_hint">Repeat New Password</string>
    <string name="fixed_income_message">هل تمتلك دخلًا ثابتًا ؟\nاضغط التالي لتزويدنا ببعض المعلومات</string>
    <string name="finishSignup">إنهاء</string>
    <string name="nextSignup">التالي</string>
    <string name="complete_info_text">من فضلك، أكمل المعلومات التالية:</string>
    <string name="income_value">قيمة الدخل الشهري الثابت</string>
    <string name="amount_of_income">Amount of income</string>
    <string name="add_income">إضافة</string>
    <string name="EditUserInformation">تعديل المعلومات الشخصية</string>
    <string name="RefactorPassword">تعديل كلمة السر</string>
    <string name="HomePage">الرئيسية</string>
    <string name="MonthsRecord">الأشهر السابقة</string>
    <string name="add">Add</string>
    <string name="UserGuide">دليل المستخدم</string>
    <string name="Settings">الإعدادات</string>
    <string name="updateInformation">تحديث المعلومات</string>
    <string name="updatePassword">تحديث كلمة السر</string>
    <string name="currentPassword">كلمة السر الحالية</string>
    <string name="currentPasswordHint">Current Password</string>
    <string name="newPassword">كلمة السر الجديدة</string>
    <string name="newPasswordHint">New Password</string>
    <string name="repeatNewPassword">إعادة كتابة كلمة السر الجديدة</string>
    <string name="repeatNewPasswordHint">Repeat New Password</string>
    <string name="ChooseMonthAndYear">اختر السنة والشهر لإظهار المصاريف</string>
    <string name="search">بحث</string>
    <string name="quotation">تذكر، المالُ رَئيسٌ سَيِّء، لكِنَّهُ خادِمٌ مُمتاز...</string>
    <string name="income_during_the_month">كامل الدخل خلال الشهر</string>
    <string name="remainder_of_the_income">المتبقي من الدخل</string>
    <string name="your_extra_income">مجموع دخلك الإضافي</string>
    <string name="monthly_expenses">مجموع مصاريفك\n لهذا الشهر</string>
    <string name="last_month_expenses">مجموع مدخرات الشهر الماضي</string>
    <string name="month">الشهر</string>
    <string name="year">السنة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="UpdateFixedIncome">تحديث قيمة الدخل الشهري الثابت</string>
    <string name="Update">تحديث</string>
    <string name="cash">Cash Available</string>
    <string name="myLocation">عرض موقعي</string>
    <string name="mainTitleLocation">موقعي</string>
    <string name="switchUpadteText">تحديثات الموقع</string>
    <string name="gps_savepower">GPS/Save Power</string>
    <string name="gpsSavePower">GPS/SavePower</string>

    <string-array name="type_incomes">
        <item>يومي</item>
        <item>أسبوعي</item>
        <item>شهري</item>
    </string-array>
    <string-array name="account_type">
        <item>مصروف</item>
        <item>إيراد / دخل</item>
    </string-array>
    <string-array name="years">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="Choose">
        <item>اختر الحساب</item>
    </string-array>
</resources>