<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jacarta"
    android:orientation="vertical"
    tools:context=".SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/top_background"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="255dp"
                    android:layout_height="195dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/create_account_photo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="80dp"
                    android:paddingEnd="30dp"
                    android:text="@string/createAccount"
                    android:textColor="@color/jacarta"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:text="@string/full_name"
                style="@style/label_feilds_style"/>

            <EditText
                android:id="@+id/fullName"
                android:hint="@string/full_name_hint"
                android:maxLines="1"
                android:inputType="textPersonName"
                style="@style/fields_style" />

            <TextView
                android:text="@string/birth_day"
                style="@style/label_feilds_style" />

            <EditText
                android:id="@+id/birthDay"
                android:hint="@string/birthday_hint"
                android:maxLines="1"
                android:inputType="textPersonName"
                style="@style/fields_style"/>


            <TextView
                android:text="@string/emailTitle"
                style="@style/label_feilds_style" />

            <EditText
                android:id="@+id/emailSignup"
                android:hint="@string/email_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                style="@style/fields_style"/>

            <TextView
                android:text="@string/passwordTitle"
                style="@style/label_feilds_style"
                />

            <EditText
                android:id="@+id/passwordSignup"
                android:maxLines="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/fields_style"/>

            <TextView
                android:text="@string/repeatPassword"
                style="@style/label_feilds_style"
                />

            <EditText
                android:id="@+id/passwordRepeatSignup"
                android:hint="@string/repeat_password_hint"
                android:inputType="textPassword"
                style="@style/fields_style"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/fixed_income_message"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/finishBtnSignup"
                    android:text="@string/finishSignup"
                    style="@style/btns_signup_style" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nextBtnSignup"
                    android:text="@string/nextSignup"
                    android:layout_marginStart="20dp"
                    style="@style/btns_signup_style"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
