<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jacarta"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/top_background"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="255dp"
            android:layout_height="251dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/money" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="45dp"
            android:paddingEnd="30dp"
            android:text="@string/mainTitleInLoginActivity"
            android:textColor="@color/jacarta"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="125dp"
            android:paddingEnd="30dp"
            android:text="@string/noteInLoginActivity"
            android:textColor="@color/jacarta"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/label_fields_style"
            android:text="@string/emailTitle" />

        <EditText
            android:id="@+id/email"
            style="@style/fields_style"
            android:hint="@string/email"
            android:inputType="textPersonName"
            tools:ignore="TextFields" />

        <TextView
            style="@style/label_fields_style"
            android:text="@string/passwordTitle" />

        <EditText
            android:id="@+id/password"
            style="@style/fields_style"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            android:textDirection="firstStrong" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/forgetPass"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textDirection="firstStrong" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            style="@style/buttons_login_style"
            android:background="@drawable/btn_background"
            android:text="@string/loginBtnTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtnInLoginActivity"
            style="@style/buttons_login_style"
            android:background="@drawable/btnsignup_background"
            android:text="@string/createNewAccount" />
    </LinearLayout>

</LinearLayout>
