<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jacarta"
    android:orientation="vertical"
    tools:context=".FixedIncomeInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/top_background"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/NameOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:paddingTop="80dp"
            android:textColor="@color/jacarta"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            style="@style/textViews_fixed_style"
            android:layout_marginTop="30dp"
            android:text="@string/complete_info_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            style="@style/label_fields_style"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:text="@string/income_value"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/IncomeAmount"
            style="@style/fields_style"
            android:hint="@string/amount_of_income"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            style="@style/label_fields_style"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:text="المبلغ المتوفر حاليًا"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/CashAmount"
            style="@style/fields_style"
            android:hint="@string/cash"
            android:inputType="number"
            android:maxLines="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:text="ملاحظة: في حال لم تدخل المبلغ سيتم اعتبار قيمة الدخل الشهري الثابت هو المبلغ الحالي"
            android:textDirection="firstStrong" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AddIncomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="53dp"
            android:background="@drawable/btn_background"
            android:text="@string/add_income"
            android:textColor="@color/jacarta"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>